--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "loyaltyhub-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "index.mjs",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start:dev": "nodemon ./src/index.mjs",
@@ -13,7 +13,8 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "mysql2": "^3.10.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.3"
