--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "express-session": "^1.18.0",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
-    "sequelize": "^6.37.3",
-    "supertest": "^7.0.0"
+    "sequelize": "^6.37.3"
   },
   "devDependencies": {
     "jest": "^29.7.0",
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.1.3",
+    "supertest": "^7.0.0"
   },
   "type": "module"
 }
