--- a/package.json
+++ b/package.json
@@ -15,13 +15,18 @@
     "argon2": "^0.40.3",
     "cors": "^2.8.5",
     "cross-env": "^7.0.3",
+    "csv": "^6.3.9",
+    "date-fns": "^3.6.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
+    "fast-csv": "^5.0.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
-    "sequelize": "^6.37.3"
+    "node-cron": "^3.0.3",
+    "sequelize": "^6.37.3",
+    "ssh2-sftp-client": "^10.0.3"
   },
   "devDependencies": {
     "@babel/core": "^7.24.8",
