--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express-session": "^1.18.0",
     "express-validator": "^7.1.0",
     "fast-csv": "^5.0.1",
+    "get-stream": "^9.0.1",
     "jsonwebtoken": "^9.0.2",
     "mysql2": "^3.10.1",
     "node-cron": "^3.0.3",
