--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "mysql2": "^3.10.1",
     "node-cron": "^3.0.3",
     "sequelize": "^6.37.3",
+    "socket.io": "^4.7.5",
     "ssh2-sftp-client": "^10.0.3"
   },
   "devDependencies": {
