unit,integration,system testing done

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "main": "index.mjs",
   "scripts": {
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles",
+    "test:unit": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --testPathPattern=src/models/__test__",
+    "test:integration": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --testPathPattern=src/routes/__test__",
+    "test:system": "node --experimental-vm-modules node_modules/jest/bin/jest.js --detectOpenHandles --testPathPattern=src/__test__",
     "start:dev": "nodemon src/app.mjs",
     "start": "node src/app.mjs"
   },
